# agentic-ai-architectures

./: .env.example  .gitignore  README.md  env.example  environment.yml  image-gen.py  ingestion.py  ingestion_pinecone.py  langchain_client.py  lc_logger.py  mRAG.py  main.py  multi-modal-rag.py  output.md  prompt.py  pyproject.toml  react.py  state.py  utils.py  vector-medium-blog-1.txt
00-basics/: main.py
01-react-agent/: .env  main.py
02-deep-dive-react/: main.py
03-intro-to-RAG/03.01-basic-RAG/: env.example  ingestion.py  main.py  pyproject.toml
03-intro-to-RAG/03.02-vectorstore-inmemory/: main.py  pyproject.toml
04-langchain-helper-RAG/: ingestion.py
05-router-agent/: main.py
05-router-agent/code_interpreter/: agents.py
06-ice-breaker/: env.example  output_parser.py
06-ice-breaker/third_parties/: linkedin.py
07-image-gen/: image-gen.py
07-image-gen/learning/: image-1.py  image-2.py  image-3.py
08-multi-rag/ingestion-pipeline/: partitioning.py  summarizing.py  vector_store.py
09-langgraph/: main.py  nodes.py
11-Reflexion-agent/: chains.py  env.example  schemas.py  tool_executor.py
12-Agentic-RAG/graph/: state.py
12.1-console_script/: hello.py  pyproject.toml  temp.py
13-Hanoi-Tower/: main2.py
agents/ice-breaker/: README.md  main.py  pyproject.toml  response.json
agents/react-agent/: README.md  pyproject.toml
agents/react-from-scratch/: README.md  pyproject.toml
agents/router-agent/: README.md  pyproject.toml
graph/: graph.py
graph/chains/: hallucination_grader.py  question_router.py  (+1 more)
third_parties/: linkedin.py
(+52 files in other folders)
